# Autonomous-driving-project

./: .gitignore  README.md  pyproject.toml
scripts/: run_evaluate.sh  run_predict.sh  run_train.sh
src/kitti_object_detection/: config.py  evaluate.py  main.py  predict.py  select_qualitative.py  train.py  visualize.py
src/kitti_object_detection/data/: convert_kitti_to_yolo.py  kitti_dataset.yaml  kitti_reader.py
